<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:scrollbars="horizontal|vertical"
    android:scrollbarStyle="outsideInset"
    tools:context="com.acme.weatherapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/corner_radius_cardview"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@color/fresco">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/WheatherTitleLabel"
                        android:id="@+id/tv_estadoTiempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:src="@drawable/refrescar"
                        android:onClick="sincronizar"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="sync" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/distance_components">

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/probabilidadLluvia"
                        android:textColor="@color/blanco"/>

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:id="@+id/tv_probabilidadLluvia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blanco"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/distance_components">

                    <ImageView
                        android:id="@+id/iv_estadoTiempo"
                        android:src="@drawable/fresco"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <TextView
                        style="@style/WheatherTitleLabel"
                        android:id="@+id/tv_gradosTemperatura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/corner_radius_cardview"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/distance_components">

                    <ImageView
                        android:src="@drawable/velocidad_viento"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="@dimen/distance_components"/>

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/velocidadViento" />

                    <TextView
                        style="@style/WheatherTextReadOnly"
                        android:id="@+id/tv_velocidadViento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separador"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/distance_components">

                    <ImageView
                        android:src="@drawable/sensacion_termica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/distance_components"/>

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sensacionTermica"/>

                    <TextView
                        style="@style/WheatherTextReadOnly"
                        android:id="@+id/tv_sensacionTermica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separador"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/distance_components">

                    <ImageView
                        android:src="@drawable/humedad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/distance_components"/>

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humedad"/>

                    <TextView
                        style="@style/WheatherTextReadOnly"
                        android:id="@+id/tv_humedad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separador"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/distance_components">

                    <ImageView
                        android:src="@drawable/visibilidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/distance_components"/>

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibilidad"/>

                    <TextView
                        style="@style/WheatherTextReadOnly"
                        android:id="@+id/tv_visibilidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/separador"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/distance_components">

                    <ImageView
                        android:src="@drawable/presion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/distance_components"/>

                    <TextView
                        style="@style/WheatherInputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/presion"/>

                    <TextView
                        style="@style/WheatherTextReadOnly"
                        android:id="@+id/tv_presion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
